welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: value =< is not a member of Int
	if(90=<Math.abs(n)=<110==true){
             ^