welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	if(90=<Math.abs(n)=<110==true){
		return true
	}else{
		return false
	}
}
